buildscript {
    ext {
        compose_ui_version = '1.4.3'
    }

    dependencies {
        classpath(Build.androidBuildTools)
        classpath(Build.kotlinGradlePlugin)
        classpath(Build.hiltAndroid)
        classpath(Build.ktlint)
        classpath(Build.serialization)
        classpath(Hilt.plugin)
    }
}// Top-level build file where you can add configuration options common to all sub-projects/modules.
plugins {
    id 'java'
    id 'com.android.application' version '7.4.1' apply false
    id 'com.android.library' version '7.4.1' apply false
    id 'org.jetbrains.kotlin.android' version '1.8.10' apply false
    id 'org.jetbrains.kotlin.jvm' version '1.8.0' apply false

}

allprojects {
    apply plugin: 'org.jlleitschuh.gradle.ktlint'
}

test {
    // Discover and execute JUnit based tests
    useJUnit()

    // Discover and execute JUnit Platform-based tests
    useJUnitPlatform()

    // show standard out and standard error of the test JVM(s) on the console
    testLogging.showStandardStreams = true

    // calculate and set half of available processors as parallel fork
    maxParallelForks(Runtime.runtime.availableProcessors().intdiv(2) ?: 1)

    // disable reports
    reports.html.required = false

    // set heap size for the test JVM(s)
    minHeapSize = "128m"
    maxHeapSize = "512m"

    // set JVM arguments for the test JVM(s)
    jvmArgs '-XX:MaxPermSize=256m'

    // Fail the 'test' task on the first test failure
    failFast = true
}

def testDependencies = [
        ':app'         : [':testMockedDebugUnitTest'],
        ':datasource'  : [':testDebugUnitTest'],
        ':domain'      : [':test'],
        ':presentation': [':testDebugUnitTest'],
]

task ktlintFormatAll() {
    group = 'Verification'
    description = 'Run ktlintFormat in all modules'
    dependsOn testDependencies.collectMany { entry ->
        def module = entry.key
        def ktlintFormat = entry.value.collect { "$module:ktlintFormat" }
        ktlintFormat
    }
}

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}